mgr: include ceph_secrets in tox module set
Add the ceph_secrets mgr module to the default tox module.

Fixes: https://tracker.ceph.com/issues/74562

Signed-off-by: Redouane Kachach <rkachach@ibm.com>

--- a/src/pybind/mgr/tox.ini
+++ b/src/pybind/mgr/tox.ini
@@ -88,6 +88,7 @@ commands =
            -m alerts \
            -m balancer \
            -m cephadm \
+           -m ceph_secrets \
            -m crash \
            -m dashboard \
            -m devicehealth \
@@ -141,6 +142,7 @@ modules =
     alerts \
     balancer \
     cephadm \
+    ceph_secrets \
     cli_api \
     crash \
     devicehealth \
